cerrar aplastando afuera

--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -439,6 +439,7 @@
                 <div class="w-full">
                     <img src="/src/assets/img/productos/hodd1.webp" alt="hoddie 1"
                         class="w-full object-cover object-top aspect-[230/307]" />
+                        
                 </div>
 
                 <div class="p-4 flex-1 flex flex-col">
@@ -449,7 +450,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -468,6 +475,13 @@
                             <h6 class="text-sm sm:text-base font-bold text-white">$100.00</h6>
 
                         </div>
+                    </div>
+                    <div class="flex items-center gap-2 mt-4">
+
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
                     </div>
 
                 </div>
@@ -489,7 +503,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -509,7 +529,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -529,7 +555,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -549,7 +581,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -568,7 +606,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -588,7 +632,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -617,7 +667,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -637,7 +693,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -657,7 +719,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -676,7 +744,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -695,7 +769,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -715,7 +795,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -735,7 +821,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -754,7 +846,13 @@
 
                         </div>
                     </div>
+                    <div class="flex items-center gap-2 mt-4">
 
+                        <button type="button"
+                            class="text-sm px-2 h-9 font-semibold w-full bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br text-white tracking-wide ml-auto outline-none border-none rounded">
+                            Add to cart
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
