busqueda aun en proceso

--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -152,9 +152,10 @@
     <div id="contenedorVentanasDesplegables">
     </div>
     <!--normal vinily-->
-    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4 xs:py-10">Billie Eilish
+    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4 xs:py-10">
+        Billie Eilish
         Store </h2>
-    <div class="font-[sans-serif] nav-animated">
+    <div id="normalVinyl  class=" font-[sans-serif] nav-animated">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="normalVinyl"
                 class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
@@ -439,7 +440,7 @@
                 <div class="w-full">
                     <img src="/src/assets/img/productos/hodd1.webp" alt="hoddie 1"
                         class="w-full object-cover object-top aspect-[230/307]" />
-                        
+
                 </div>
 
                 <div class="p-4 flex-1 flex flex-col">
