barra de busqueda lista

--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -148,7 +148,7 @@
     </nav>
     <!--barra de busqueda si activa el icono de lupa-->
     <!--y ventana flotante de inicio de sesion si da click al icono de persona-->
-    <div id="contenedorVentanasDesplegables">
+    <div class="p-10" id="contenedorVentanasDesplegables">
     </div>
 
     <!--main-->
