--- a/src/pages/resultadoBusqueda.html
+++ b/src/pages/resultadoBusqueda.html
@@ -153,9 +153,7 @@
     </div>
 
     <!--contenedor de busqueda-->
-    <div class="p-10" id="resultado">
-
-    </div>
+    <div id="resultado" class="text-lg font-medium"></div>
 
 
 
@@ -262,7 +260,6 @@
         </div>
     </footer>
     <script src="/src/js/navBar.js"></script>
-    <script src="/src/js/busqueda.js"></script>
 </body>
 
 </html>
