--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -155,14 +155,14 @@
     <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4 xs:py-10">
         Billie Eilish
         Store </h2>
-    <div id="normalVinyl  class=" font-[sans-serif] nav-animated">
+    <div id="normalvinyl" class=" font-[sans-serif] nav-animated normalvinyl">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="normalVinyl"
                 class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Normal Vinyl</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
-                <div class="bg-transparent rounded p-4 cursor-pointer hover:-translate-y-1 transition-all relative">
+                <div  class="bg-transparent rounded p-4 cursor-pointer hover:-translate-y-1 transition-all relative">
                     <div class="mb-4 bg-transparent rounded p-2">
                         <img src="/src/assets/img/productos/normalVynil1.webp" alt="Normal vinyl 1"
                             class="aspect-[33/35] w-full object-contain" />
@@ -253,7 +253,7 @@
         </div>
     </div>
     <!--Limited edition vinyl-->
-    <div class="font-[sans-serif] nav-animated-bg">
+    <div id="limitededitionvinyl" class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="limitedEditionVinyl"
                 class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">Limited
@@ -352,7 +352,7 @@
         </div>
     </div>
     <!--Mistery Box-->
-    <div class="font-[sans-serif] nav-animated-bg">
+    <div id="misteryboxs" class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="misteryBoxs"
                 class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
@@ -429,7 +429,7 @@
         </div>
     </div>
     <!--hoddies-->
-    <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
+    <div id="hoddieS" class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
         <h2 id="hoddies" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
             Hoddies
         </h2>
@@ -645,7 +645,7 @@
         </div>
     </div>
     <!--Overside t-shirts-->
-    <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
+    <div id="oversidet-shirts" class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
         <h2 id="oversideTshirst"
             class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
             Overside T-shirts
@@ -859,7 +859,7 @@
         </div>
     </div>
     <!--necklaces-->
-    <div class="font-[sans-serif] nav-animated-bg">
+    <div id="necklaceS" class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="necklaces" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Necklaces</h2>
@@ -956,7 +956,7 @@
         </div>
     </div>
     <!--Shoes-->
-    <div class="font-[sans-serif] nav-animated-bg">
+    <div id="shoeS" class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="shoes" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Shoes
@@ -1146,7 +1146,7 @@
         </div>
     </div>
     <!--signed Things-->
-    <div class="font-[sans-serif] nav-animated-bg">
+    <div id="signedthings" class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="signedThings"
                 class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
