--- a/src/pages/aboutHer.html
+++ b/src/pages/aboutHer.html
@@ -129,7 +129,7 @@
                             class=""></path>
                     </svg>
                 </button>
-                <a href="">
+                <a href="/src/pages/carrito.html">
                     <svg class="h-8 p-1   text-white hover:text-blue-500 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="shopping-cart" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
