--- a/src/pages/tour.html
+++ b/src/pages/tour.html
@@ -16,7 +16,7 @@
     <title>Tour</title>
 </head>
 
-<body >
+<body>
     <!--Bar Nav-->
     <nav class="sticky top-0 z-50 bg-white border-gray-200  dark:border-gray-700 nav-animated-bg">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
@@ -128,7 +128,7 @@
                             class=""></path>
                     </svg>
                 </button>
-                <a href="">
+                <a href="/src/pages/carrito.html">
                     <svg class="h-8 p-1   text-white hover:text-blue-500 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="shopping-cart" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
