idsAgregados a la ventana index para habilitar alli tambien el carrrito

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Shoelaces</h3>
                     <p class="mt-1 text-lg font-medium text-white">$10.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="shoe8" onclick="agregarProductos('39','HIT ME HARD AND SOFT Shoelaces','shoes','10')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -210,7 +211,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Blosh Ornament</h3>
                     <p class="mt-1 text-lg font-medium text-white">$28.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="neck4" onclick="agregarProductos('31','FRIENDSHIP NECKLACE','necklaces','28')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -224,7 +226,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Billie 23 Zip Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$110.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="hoddie1" onclick="agregarProductos('12','Billie 23 Zip Hoodie','hoddies','110')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -239,7 +242,9 @@
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT WORLD
                         TOUR Pullover Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$100.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="hoddie2"
+                        onclick="agregarProductos('13','HIT ME HARD AND SOFT WORLDTOUR Pullover Hoodie','hoddies','100')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -255,7 +260,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Black Cover Pullover Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$100.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="hoddie3"
+                        onclick="agregarProductos('14','HIT ME HARD AND SOFT BlackCover Pullover Hoodie','hoddies','100')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -269,7 +276,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Grey Zipper Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$110.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="hoddie4"
+                        onclick="agregarProductos('15','HIT ME HARD AND SOFT GreyZipper Hoodie','hoddies','110')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -283,7 +292,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Tour Tee</h3>
                     <p class="mt-1 text-lg font-medium text-white">$45.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="tshirt1"
+                        onclick="agregarProductos('20','HIT ME HARD AND SOFT Tour Tee','oversize t-shirt','45')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -297,7 +308,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Admat Poster Tee</h3>
                     <p class="mt-1 text-lg font-medium text-white">$45.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="tshirt2"
+                        onclick="agregarProductos('21','HIT ME HARD AND SOFT AdmatPoster Tee','oversize t-shirt','45')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -321,7 +334,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HMHAS Blue Necklace</h3>
                     <p class="mt-1 text-lg font-medium text-white">$60.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="neck1" onclick="agregarProductos('28','HMHAS Blue Necklace','necklaces','60')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -336,7 +350,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Blohsh Die Cut Dogtag</h3>
                     <p class="mt-1 text-lg font-medium text-white">$75.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="neck3" onclick="agregarProductos('30','Blohsh Die Cut Dogtag','necklaces','75')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -350,7 +365,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Standard Vinyl</h3>
                     <p class="mt-1 text-lg font-medium text-white">$33.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="normalVinyl4"
+                        onclick="agregarProductos('4','HIT ME HARD AND SOFT Standard Vinyl','normal vinyl','33')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -366,6 +383,7 @@
                     <p class="mt-1 text-lg font-medium text-white">$35.00</p>
                     <button id="normalVinyl3"
                         onclick="agregarProductos('3','Happier Than Ever Vinyl Color Black','normal vinyl','35')"
+                        onclick="agregarProductos('3','Happier Than Ever Vinyl Color Black','normal vinyl','35')"
                         type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
@@ -380,7 +398,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Excl. Signed CD</h3>
                     <p class="mt-1 text-lg font-medium text-white">$140.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="signed1"
+                        onclick="agregarProductos('40','HIT ME HARD AND SOFT Excl. Signed CD','signed Things','140')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -394,7 +414,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Excl. Signed Vinyl</h3>
                     <p class="mt-1 text-lg font-medium text-white">$120.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="signed2"
+                        onclick="agregarProductos('41','HIT ME HARD AND SOFT Excl. Signed Vinyl','signed Things','120')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -408,7 +430,8 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Billie Eilish x Air Jordan 1 KO</h3>
                     <p class="mt-1 text-lg font-medium text-white">$170.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="shoe7" onclick="agregarProductos('38','Billie Eilish x Air Jordan 1 KO','shoes','170')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
@@ -422,7 +445,9 @@
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Nike x Billie Eilish Air Alpha Force 88 Fire Red</h3>
                     <p class="mt-1 text-lg font-medium text-white">$130.00</p>
-                    <button type="button" title="Add to cart" class="bg-transparent outline-none border-none">
+                    <button id="shoe1"
+                        onclick="agregarProductos('32','Nike x Billie Eilish Air Alpha Force 88 Fire Red','shoes','130')"
+                        type="button" title="Add to cart" class="bg-transparent outline-none border-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-white w-5 h-5 inline-block"
                             viewBox="0 0 512 512">
                             <path
